--- a/view/frontend/layout/algolia_search_handle.xml
+++ b/view/frontend/layout/algolia_search_handle.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="Algolia_AlgoliaSearch::internals/autocomplete.css" />
-        <css src="Algolia_AlgoliaSearch::internals/grid.css" />
-        <css src="Algolia_AlgoliaSearch::internals/algolia-reset.css" />
-        <css src="Algolia_AlgoliaSearch::internals/instantsearch.v3.css" />
-        <css src="Algolia_AlgoliaSearch::internals/recommend.css" />
+        <css src="Algolia_AlgoliaSearch::js/internals/autocomplete.css" />
+        <css src="Algolia_AlgoliaSearch::js/internals/grid.css" />
+        <css src="Algolia_AlgoliaSearch::js/internals/algolia-reset.css" />
+        <css src="Algolia_AlgoliaSearch::js/internals/instantsearch.v3.css" />
+        <css src="Algolia_AlgoliaSearch::js/internals/recommend.css" />
     </head>
     <body>
         <referenceBlock name="head.additional">
